k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masterannonce-ingress
  labels:
    app: masterannonce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: masterannonce.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: masterannonce-service
                port:
                  number: 80
